gateway/test/src/test/resources/test-plan-data/simple/simple-echo/errors/002-403.resttest
GET /SimpleEchoTest/echo/1.0.0/path/to/app/resource admin/admin
X-Echo-ErrorCode: 403
X-API-Key: 12345

----
403
